Display reported used space when available

https://bugzilla.gnome.org/show_bug.cgi?id=559311